src/objects/Google_Recurring_Events__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Google_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Google Events</relationshipLabel>
        <relationshipName>Google_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ByDay__c</fullName>
        <label>ByDay</label>
        <picklist>
            <picklistValues>
                <fullName>SU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Freq__c</fullName>
        <label>Freq</label>
        <picklist>
            <picklistValues>
                <fullName>YEARLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONTHLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAILY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEEKLY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Event_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Google Event Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <label>Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Event_Date__c</fullName>
        <label>Last Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Multiday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repeats_on__c</fullName>
        <label>Repeats on</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Until__c</fullName>
        <label>Until</label>
        <type>DateTime</type>
    </fields>
    <label>Google Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_date__c</columns>
        <columns>Broker__c</columns>
        <columns>Multiday__c</columns>
        <columns>Recurring_Events__c</columns>
        <columns>Google_Event_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Google Recurring Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>